a4/planParser.py
# Generated from plan.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


"""
- CS3040 - 001
- Fall 2022
- Assignment 4 - Complex ANTLRs
- Name: Paige Rosynek
- Date: 11.10.2022
"""
buildings = {}
floors = {}

def check_valid_floor(floor):
        """
        Checks if floor specified in builing exists in the list of floors
        
        :param str floor: floor name to check
        :raises Exception: if floor does not exist in the list of floors
        """
        if floor not in list(floors.keys()):
            raise Exception(f'Reference to missing floor {floor}')


def check_duplicate_floor(floor):
    """
        Checks if floor is already specified in the list of floors
        
        :param str floor: floor name to check
        :raises Exception: if floor exists in the list of floors
    """
    if floor in floors.keys():
        raise Exception(f'Duplicate floor {floor}')
        

def output_complex_area():
    """
    Calculates and outputs the area of each building and the total area of the complex for a valid input string
    """
    total_area = 0
    for building, floor_list in buildings.items():
        area = 0
        for floor in floor_list:
            rooms = floors[floor] 
            area += sum(map(lambda room: int(room[0]) * int(room[1]), rooms))
            
        total_area += area
        print(f'Area for building {building}: {area} square feet.')
    
    print(f'Total area: {total_area} square feet.')


class planParser ( Parser ):

    grammarFileName = "plan.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'{'", "'['", "'building'", "'complex'", 
                     "'rooms'", "'room'", "'floor'", "'floors'", "'has'", 
                     "'by'", "'with'", "<INVALID>", "<INVALID>", "'}'", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "COMMA", "LCBRACKET", "LBRACKET", "BUILDING", 
                      "COMPLEX", "ROOMS", "ROOM", "FLOOR", "FLOORS", "HAS", 
                      "BY", "WITH", "NAME", "NUMBER", "RCBRACKET", "RBRACKET", 
                      "WS" ]

    RULE_plan = 0
    RULE_floor = 1
    RULE_complex = 2
    RULE_building = 3
    RULE_floor_list = 4
    RULE_more_floors = 5
    RULE_floor_reference = 6
    RULE_room_list = 7
    RULE_more_rooms = 8
    RULE_room = 9
    RULE_name = 10
    RULE_number = 11
    RULE_empty = 12

    ruleNames =  [ "plan", "floor", "complex", "building", "floor_list", 
                   "more_floors", "floor_reference", "room_list", "more_rooms", 
                   "room", "name", "number", "empty" ]

    EOF = Token.EOF
    COMMA=1
    LCBRACKET=2
    LBRACKET=3
    BUILDING=4
    COMPLEX=5
    ROOMS=6
    ROOM=7
    FLOOR=8
    FLOORS=9
    HAS=10
    BY=11
    WITH=12
    NAME=13
    NUMBER=14
    RCBRACKET=15
    RBRACKET=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PlanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def complex_(self):
            return self.getTypedRuleContext(planParser.ComplexContext,0)


        def EOF(self):
            return self.getToken(planParser.EOF, 0)

        def floor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(planParser.FloorContext)
            else:
                return self.getTypedRuleContext(planParser.FloorContext,i)


        def getRuleIndex(self):
            return planParser.RULE_plan

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlan" ):
                listener.enterPlan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlan" ):
                listener.exitPlan(self)




    def plan(self):

        localctx = planParser.PlanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_plan)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.floor()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==8):
                    break

            self.state = 31
            self.complex_()
            self.state = 32
            self.match(planParser.EOF)
            output_complex_area()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FloorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._name = None # NameContext
            self._room_list = None # Room_listContext

        def FLOOR(self):
            return self.getToken(planParser.FLOOR, 0)

        def name(self):
            return self.getTypedRuleContext(planParser.NameContext,0)


        def HAS(self):
            return self.getToken(planParser.HAS, 0)

        def ROOMS(self):
            return self.getToken(planParser.ROOMS, 0)

        def room_list(self):
            return self.getTypedRuleContext(planParser.Room_listContext,0)


        def ROOM(self):
            return self.getToken(planParser.ROOM, 0)

        def getRuleIndex(self):
            return planParser.RULE_floor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloor" ):
                listener.enterFloor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloor" ):
                listener.exitFloor(self)




    def floor(self):

        localctx = planParser.FloorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_floor)
        try:
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.match(planParser.FLOOR)
                self.state = 36
                localctx._name = self.name()
                self.state = 37
                self.match(planParser.HAS)
                self.state = 38
                self.match(planParser.ROOMS)
                self.state = 39
                localctx._room_list = self.room_list()
                try:
                   check_duplicate_floor(localctx._name.value)
                   floors[localctx._name.value] = localctx._room_list.dimension_list
                except Exception as e:
                   print(e)
                   exit()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(planParser.FLOOR)
                self.state = 48
                localctx._name = self.name()
                self.state = 49
                self.match(planParser.HAS)
                self.state = 50
                self.match(planParser.ROOM)
                self.state = 51
                localctx._room_list = self.room_list()
                try:
                   check_duplicate_floor(localctx._name.value)
                   floors[localctx._name.value] = localctx._room_list.dimension_list
                except Exception as e:
                   print(e)
                   exit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComplexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMPLEX(self):
            return self.getToken(planParser.COMPLEX, 0)

        def building(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(planParser.BuildingContext)
            else:
                return self.getTypedRuleContext(planParser.BuildingContext,i)


        def getRuleIndex(self):
            return planParser.RULE_complex

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplex" ):
                listener.enterComplex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplex" ):
                listener.exitComplex(self)




    def complex_(self):

        localctx = planParser.ComplexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_complex)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(planParser.COMPLEX)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.building()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BuildingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._name = None # NameContext
            self._floor_list = None # Floor_listContext

        def BUILDING(self):
            return self.getToken(planParser.BUILDING, 0)

        def name(self):
            return self.getTypedRuleContext(planParser.NameContext,0)


        def WITH(self):
            return self.getToken(planParser.WITH, 0)

        def FLOORS(self):
            return self.getToken(planParser.FLOORS, 0)

        def floor_list(self):
            return self.getTypedRuleContext(planParser.Floor_listContext,0)


        def FLOOR(self):
            return self.getToken(planParser.FLOOR, 0)

        def getRuleIndex(self):
            return planParser.RULE_building

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuilding" ):
                listener.enterBuilding(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuilding" ):
                listener.exitBuilding(self)




    def building(self):

        localctx = planParser.BuildingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_building)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(planParser.BUILDING)
                self.state = 68
                localctx._name = self.name()
                self.state = 69
                self.match(planParser.WITH)
                self.state = 70
                self.match(planParser.FLOORS)
                self.state = 71
                localctx._floor_list = self.floor_list()
                buildings[localctx._name.value] = localctx._floor_list.floors
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(planParser.BUILDING)
                self.state = 75
                localctx._name = self.name()
                self.state = 76
                self.match(planParser.WITH)
                self.state = 77
                self.match(planParser.FLOOR)
                self.state = 78
                localctx._floor_list = self.floor_list()
                buildings[localctx._name.value] = localctx._floor_list.floors
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Floor_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.floors = None
            self._floor_reference = None # Floor_referenceContext
            self._more_floors = None # More_floorsContext

        def LCBRACKET(self):
            return self.getToken(planParser.LCBRACKET, 0)

        def floor_reference(self):
            return self.getTypedRuleContext(planParser.Floor_referenceContext,0)


        def more_floors(self):
            return self.getTypedRuleContext(planParser.More_floorsContext,0)


        def RCBRACKET(self):
            return self.getToken(planParser.RCBRACKET, 0)

        def getRuleIndex(self):
            return planParser.RULE_floor_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloor_list" ):
                listener.enterFloor_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloor_list" ):
                listener.exitFloor_list(self)




    def floor_list(self):

        localctx = planParser.Floor_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_floor_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(planParser.LCBRACKET)
            self.state = 84
            localctx._floor_reference = self.floor_reference()
            try:
               check_valid_floor(localctx._floor_reference.floor_name)
               localctx.floors = [localctx._floor_reference.floor_name]
            except Exception as e:
               print(e)
               exit()
            self.state = 91
            localctx._more_floors = self.more_floors()
            self.state = 92
            self.match(planParser.RCBRACKET)
            localctx.floors = localctx.floors + localctx._more_floors.floors
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class More_floorsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.floors = None
            self._floor_reference = None # Floor_referenceContext
            self._more_floors = None # More_floorsContext

        def COMMA(self):
            return self.getToken(planParser.COMMA, 0)

        def floor_reference(self):
            return self.getTypedRuleContext(planParser.Floor_referenceContext,0)


        def more_floors(self):
            return self.getTypedRuleContext(planParser.More_floorsContext,0)


        def empty(self):
            return self.getTypedRuleContext(planParser.EmptyContext,0)


        def getRuleIndex(self):
            return planParser.RULE_more_floors

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMore_floors" ):
                listener.enterMore_floors(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMore_floors" ):
                listener.exitMore_floors(self)




    def more_floors(self):

        localctx = planParser.More_floorsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_more_floors)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(planParser.COMMA)
                self.state = 96
                localctx._floor_reference = self.floor_reference()
                try:
                   check_valid_floor(localctx._floor_reference.floor_name)
                   localctx.floors = [localctx._floor_reference.floor_name]
                except Exception as e:
                   print(e)
                   exit()
                self.state = 103
                localctx._more_floors = self.more_floors()
                localctx.floors = localctx.floors + localctx._more_floors.floors
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.empty()
                localctx.floors = []
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Floor_referenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.floor_name = None
            self._name = None # NameContext

        def name(self):
            return self.getTypedRuleContext(planParser.NameContext,0)


        def getRuleIndex(self):
            return planParser.RULE_floor_reference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloor_reference" ):
                listener.enterFloor_reference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloor_reference" ):
                listener.exitFloor_reference(self)




    def floor_reference(self):

        localctx = planParser.Floor_referenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_floor_reference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            localctx._name = self.name()
            localctx.floor_name = localctx._name.value
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Room_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.dimension_list = None
            self._room = None # RoomContext
            self._more_rooms = None # More_roomsContext

        def LBRACKET(self):
            return self.getToken(planParser.LBRACKET, 0)

        def room(self):
            return self.getTypedRuleContext(planParser.RoomContext,0)


        def more_rooms(self):
            return self.getTypedRuleContext(planParser.More_roomsContext,0)


        def RBRACKET(self):
            return self.getToken(planParser.RBRACKET, 0)

        def getRuleIndex(self):
            return planParser.RULE_room_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoom_list" ):
                listener.enterRoom_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoom_list" ):
                listener.exitRoom_list(self)




    def room_list(self):

        localctx = planParser.Room_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_room_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(planParser.LBRACKET)
            self.state = 115
            localctx._room = self.room()
            localctx.dimension_list = [localctx._room.dimensions]
            self.state = 117
            localctx._more_rooms = self.more_rooms()
            self.state = 118
            self.match(planParser.RBRACKET)
            localctx.dimension_list = localctx.dimension_list + localctx._more_rooms.dimension_list
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class More_roomsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.dimension_list = None
            self._room = None # RoomContext
            self._more_rooms = None # More_roomsContext

        def COMMA(self):
            return self.getToken(planParser.COMMA, 0)

        def room(self):
            return self.getTypedRuleContext(planParser.RoomContext,0)


        def more_rooms(self):
            return self.getTypedRuleContext(planParser.More_roomsContext,0)


        def empty(self):
            return self.getTypedRuleContext(planParser.EmptyContext,0)


        def getRuleIndex(self):
            return planParser.RULE_more_rooms

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMore_rooms" ):
                listener.enterMore_rooms(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMore_rooms" ):
                listener.exitMore_rooms(self)




    def more_rooms(self):

        localctx = planParser.More_roomsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_more_rooms)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(planParser.COMMA)
                self.state = 122
                localctx._room = self.room()
                localctx.dimension_list = [localctx._room.dimensions]
                self.state = 124
                localctx._more_rooms = self.more_rooms()
                localctx.dimension_list = localctx.dimension_list + localctx._more_rooms.dimension_list
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.empty()
                localctx.dimension_list = []
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.dimensions = None
            self._number = None # NumberContext

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(planParser.NumberContext)
            else:
                return self.getTypedRuleContext(planParser.NumberContext,i)


        def BY(self):
            return self.getToken(planParser.BY, 0)

        def getRuleIndex(self):
            return planParser.RULE_room

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoom" ):
                listener.enterRoom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoom" ):
                listener.exitRoom(self)




    def room(self):

        localctx = planParser.RoomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_room)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            localctx._number = self.number()
            localctx.dimensions = [localctx._number.value]
            self.state = 134
            self.match(planParser.BY)
            self.state = 135
            localctx._number = self.number()
            localctx.dimensions.append(localctx._number.value)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self._NAME = None # Token

        def NAME(self):
            return self.getToken(planParser.NAME, 0)

        def getRuleIndex(self):
            return planParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = planParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            localctx._NAME = self.match(planParser.NAME)
            localctx.value = (None if localctx._NAME is None else localctx._NAME.text)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self._NUMBER = None # Token

        def NUMBER(self):
            return self.getToken(planParser.NUMBER, 0)

        def getRuleIndex(self):
            return planParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = planParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            localctx._NUMBER = self.match(planParser.NUMBER)
            localctx.value = int((None if localctx._NUMBER is None else localctx._NUMBER.text))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmptyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return planParser.RULE_empty

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmpty" ):
                listener.enterEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmpty" ):
                listener.exitEmpty(self)




    def empty(self):

        localctx = planParser.EmptyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_empty)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





